--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   --text-color: #9C9AB6;
 }
 
-html, body {
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -16,4 +16,103 @@ html, body {
 #container {
   width: 100vw;
   height: 100vh;
+  background-color: white;
+  background-image: url(./images/top-image.svg), url(./images/bottom-image.svg);
+  background-position: top, bottom;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+#content {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+#countdown-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+  padding-top: 140px;
+}
+
+h1 {
+  color: var(--purple);
+  letter-spacing: 0.2px;
+  font-weight: 700;
+  font-size: 36px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  letter-spacing: 0.105em;
+}
+
+#countdown {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.time {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.time > span {
+  display: block;
+  text-align: center;
+}
+
+.number {
+  color: var(--black);
+  font-size: 80px;
+}
+
+.divider {
+  display: block;
+  font-size: 80px;
+  color: var(--black);
+  padding: 0 6px;
+}
+
+#days, #horas, #minutos, #segundos {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: var(--black);
+}
+
+#describe {
+  font-size: 14px;
+  margin-bottom: 30px;
+  margin-top: 20px;
+}
+
+button {
+  background-color: var(--purple);
+  color: white;
+  width: 160px;
+  height: 46px;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+}
+
+#image-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+}
+
+#image-container img {
+  width: 610px;
+  height: 430px;
 }
