--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ h1 {
   padding: 0 6px;
 }
 
-#days, #horas, #minutos, #segundos {
+.value-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
