--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
 #container {
   width: 100vw;
   height: 100vh;
+  position: relative;
   background-color: white;
   background-image: url(./images/top-image.svg), url(./images/bottom-image.svg);
   background-position: top, bottom;
@@ -94,7 +95,7 @@ h1 {
   margin-top: 20px;
 }
 
-button {
+#register-button {
   background-color: var(--purple);
   color: white;
   width: 160px;
@@ -115,4 +116,84 @@ button {
 #image-container img {
   width: 610px;
   height: 430px;
+}
+
+/* MODAL */
+
+#modal-container {
+  display: none;
+  height: 100%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 999;
+  background-color: rgba(77, 76, 89, 0.433);
+  position: absolute;
+  top: 0;
+}
+
+#modal-content {
+  width: 300px;
+  height: 320px;
+  position: relative;
+  background-color: white;
+  border-radius: 20px;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 9px 10px 15px -6px rgba(0,0,0,0.7);
+}
+
+#close-button {
+  position: absolute;
+  height: 16px;
+  width: 16px;
+  cursor: pointer;
+  top: 0;
+  right: 0;
+  margin-top: 8px;
+  margin-right: 12px;
+  background-color: transparent;
+  border: none;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+h2 {
+  font-size: 20px;
+  font-weight: 700;
+  color: var(--purple);
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+input {
+  width: 210px;
+  height: 36px;
+  background-color: rgb(194, 194, 194);
+  color: white;
+  border: none;
+  border-radius: 8px;
+  font-size: 12px;
+  font-weight: 500;
+  margin-bottom: 20px;
+  padding: 0 8px;
+}
+
+input:focus {
+  border: none;
+  outline: 0;
+}
+
+#submit {
+  background-color: var(--purple);
+  color: white;
+  width: 160px;
+  height: 46px;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  margin-top: 20px;
 }
